--- a/trunk/tribe/ui/tribeBase.ui
+++ b/trunk/tribe/ui/tribeBase.ui
@@ -5,42 +5,110 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>764</width>
-    <height>489</height>
+    <width>1280</width>
+    <height>958</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Tribe</string>
   </property>
   <layout class="QGridLayout" >
-   <item row="0" column="0" colspan="4" >
+   <item row="1" column="0" >
+    <widget class="QListWidget" name="listWidget" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Expanding" hsizetype="Maximum" >
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="styleSheet" >
+      <string>background-color: transparent;
+selection-background-color: transparent;
+selection-color: blue;</string>
+     </property>
+     <item>
+      <property name="text" >
+       <string>Neues Element</string>
+      </property>
+     </item>
+     <item>
+      <property name="text" >
+       <string>Neues Element</string>
+      </property>
+     </item>
+     <item>
+      <property name="text" >
+       <string>Neues Element</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item rowspan="2" row="0" column="1" colspan="5" >
     <widget class="QStackedWidget" name="stackedWidget" >
      <widget class="QWidget" name="page" />
      <widget class="QWidget" name="page_2" />
     </widget>
    </item>
-   <item row="1" column="0" >
+   <item row="0" column="0" >
+    <spacer>
+     <property name="orientation" >
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType" >
+      <enum>QSizePolicy::Maximum</enum>
+     </property>
+     <property name="sizeHint" >
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="2" column="4" >
     <widget class="QPushButton" name="pushButton_2" >
+     <property name="styleSheet" >
+      <string>background-color:green;</string>
+     </property>
      <property name="text" >
-      <string>Previous Site</string>
+      <string>Previous</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1" >
-    <widget class="QPushButton" name="pushButton_3" >
-     <property name="text" >
-      <string>Cancel Installation</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="3" >
+   <item row="2" column="5" >
     <widget class="QPushButton" name="pushButton" >
      <property name="text" >
-      <string>Next Site</string>
+      <string>Next</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="2" >
+   <item row="2" column="0" >
+    <widget class="QPushButton" name="pushButton_3" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Fixed" hsizetype="Maximum" >
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text" >
+      <string>Cancel installation</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2" colspan="2" >
+    <spacer>
+     <property name="orientation" >
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" >
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="2" column="1" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
